# GTRPy

./: CONTRIBUTING.md  GR_curvature_cal.ipynb  GR_tensor_cal.ipynb  GR_tensorial_cal_v2.ipynb  LICENSE  README.md  equations.md  example.ipynb  example.md  example1.ipynb  example2.ipynb  grpy.py  grtc_gui.py  grtcgui.py  image_size_data.txt  pyproject.toml  requirements.txt  tensor_test.ipynb  tensorv1.ipynb  test.py  todo.txt
GR Tensor/: GR_full_curv.py  GR_full_curv_V1.py  example.ipynb  example1.ipynb  example2.ipynb
GRTC Main/: GRTC.py  GRTC_Cov_Derv.py  GRTC_GUI.py  GRTC_GUI_eqn_prod.py  GRTC_GUI_image_prod.py  GRTC_Tensor.py  GRTC_image_producer.py  GUI_eqn_producer.py
GRTC Main/Display/: gui_GR_tensors.py  gui_cov_derv.py  gui_lie_derv.py  image_resizer.py
GRTC Main/Equations/: GR_tensors_eqn_prod.py  cov_derv_eqn_prod.py  lie_derv_eqn_prod.py
GRTC Main/Operations/: GR_tensors.py  cov_derv.py  lie_derv.py
demos/: demo_1.md  demo_2.md  demo_3.md  demo_4.md  demo_5.md  demo_6.md  demo_7.md
display/: grtensorsGUI.py  image_resizer_grtensor.py
display/display3D/: coordinates.py  image_resizer_fields.py  mainpage.py
display/display4D/: image_resizer_fields.py  mainpage.py
display3D/: coordinates.py  image_resizer_fields.py  mainpage.py
display3D/fieldsGUI/: __init__.py  scalarfieldGUI.py  tensorfieldGUI.py  vectorfieldGUI.py
display4D/: coordinates.py  grtensorsGUI.py  image_resizer_fields.py  image_resizer_grtensor.py  mainpage.py
display4D/fieldsGUI/: __init__.py  scalarfieldGUI.py  tensorfieldGUI.py  vectorfieldGUI.py
docs/: equations.md  image_size_data.md  todo.md  user_guide.md
equations/: grtensorsEP.py  scalarfieldEP.py  tensorfieldEP.py  vectorfieldEP.py
equations/FieldsEP/: scalarfieldEP.py  tensorfieldEP.py  vectorfieldEP.py
equations/fieldsEP/: scalarfieldEP.py  tensorfieldEP.py  vectorfieldEP.py
grpy/: run.py
grpy/equations/: grtensorsEP.py  scalarfieldEP.py  tensorfieldEP.py  vectorfieldEP.py
grpy/screen/: grtensorsGUI.py
gtrpy/: run.py
gtrpy/equations/: grtensorsEP.py  scalarfieldEP.py  tensorfieldEP.py  vectorfieldEP.py
gtrpy/screen/: grtensorsGUI.py
gtrpy/tools/: image_resizer_fields3D.py  image_resizer_fields4D.py  image_resizer_grtensor.py  latex_image.py  latex_output.py
logs/: info.txt  tensor_field.txt
objects/: simplify_objects.py  simplifyobjects.py
objects/fields/: scalarfield.py  tensorfield.py  vectorfield.py
objects/grtensors/: __init__.py  (+9 more)
screen/: grtensorsGUI.py
tools/: image_resizer_fields3D.py  image_resizer_fields4D.py  latex_image_producer.py
(+67 files in other folders)
