[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gtrpy"
version = "1.9"
authors = [
  {name="Arman Çam"},
]

description = "GTRPy is a python package that allows you to calculate the well-known tensors in the General Theory of Relativity without writing a single line of code. Furthermore, you can apply many operations to 6 different types of fields, in both 3D and 4D."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics"
]

[project.urls]
"Homepage" = "https://github.com/camarman/GTRPy"
"Bug Tracker" = "https://github.com/camarman/GTRPy/issues"